# xdg-config-stow

./: AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLE.md  LICENSE.md  README.md  TESTS.md
.claude/: settings.local.json
.claude/hooks/: cargo-fmt.json
.github/workflows/: publish.yml
scripts/: pre-commit  setup-hooks.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
tmp/gh/: hosts.yml
