[package]
name = "xdg-config-stow"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
authors = ["Josef Aidt <josef.aidt@example.com>"]
description = "XDG-centric GNU stow replacement for dotfile management"
license = "MIT"
repository = "https://github.com/josefaidt/xdg-config-stow"
homepage = "https://github.com/josefaidt/xdg-config-stow"
readme = "README.md"
keywords = ["dotfiles", "symlink", "xdg", "stow", "config"]
categories = ["command-line-utilities", "config"]

[lib]
name = "xdg_config_stow"
path = "src/lib.rs"

[[bin]]
name = "xdg-config-stow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
anyhow = "1.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
